--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
   <script src="assets/js/analytics.js"></script>
 
   <link rel="icon" href="images/teal-slash-favicon.png">
-  <title>tony wang | projects</title>
+  <title>TONY WANG | PROJECTS</title>
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -33,7 +33,7 @@
             <a href="https://github.com/tonywangs" class="branch" target="_blank" rel="noopener noreferrer">└── github.sh</a>
             <a href="https://www.linkedin.com/in/tony-wang-/" class="branch" target="_blank" rel="noopener noreferrer">└── linkedin.json</a>
             <a href="https://twitter.com/TonyW__" class="branch" target="_blank" rel="noopener noreferrer">└── twitter.js</a>
-            <a href="https://metax.substack.com/" class="branch-end" target="_blank" rel="noopener noreferrer">└── substack.txt</a>
+            <a href="https://tonywang.substack.com/" class="branch-end" target="_blank" rel="noopener noreferrer">└── substack.txt</a>
           </div>
         </li>
       </ul>
@@ -68,6 +68,18 @@
             <div class="project-links">
                 <a href="https://github.com/tonywangs/AEMP-Webscrapers" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
                 <a href="https://www.youtube.com/watch?v=R7jJBUvQzZo" target="_blank" rel="noopener noreferrer" class="project-link">Demo</a>
+            </div>
+          </div>
+
+          <div class="project-post">
+            <p class="project-title"><b>SEC Analysis Tool</b></p>
+            <p class="project-description">
+              Built an AI web application that allows users to upload SEC filings (such as 10-Ks or 10-Qs) and ask natural-language questions about them. Supports consistent file storage and multiple conversation threading. 
+            </p>
+            <div class="project-links">
+                <a href="https://github.com/tonywangs/SEC-Analysis-Tool" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
+                <a href="https://youtu.be/o0zxt_X5EsY " target="_blank" rel="noopener noreferrer" class="project-link">Demo</a>
+                <a href="https://sec-analyzer-b75a1b2841d4.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="project-link">Site</a>
             </div>
           </div>
 
