--- a/reading.html
+++ b/reading.html
@@ -7,7 +7,7 @@
   <script src="assets/js/analytics.js"></script>
 
   <link rel="icon" href="images/teal-slash-favicon.png">
-  <title>tony wang</title>
+  <title>TONY WANG | READING</title>
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -33,7 +33,7 @@
             <a href="https://github.com/tonywangs" class="branch" target="_blank" rel="noopener noreferrer">└── github.sh</a>
             <a href="https://www.linkedin.com/in/tony-wang-/" class="branch" target="_blank" rel="noopener noreferrer">└── linkedin.json</a>
             <a href="https://twitter.com/TonyW__" class="branch" target="_blank" rel="noopener noreferrer">└── twitter.js</a>
-            <a href="https://metax.substack.com/" class="branch-end" target="_blank" rel="noopener noreferrer">└── substack.txt</a>
+            <a href="https://tonywang.substack.com/" class="branch-end" target="_blank" rel="noopener noreferrer">└── substack.txt</a>
           </div>
         </li>
       </ul>
@@ -53,114 +53,116 @@
               <br>
 
               <p><b> 2025 </b></p>
-              <p><i> abolish silicon valley: how to liberate technology from capitalism </i> | wendy liu </p>
-              <p><i> bhagavad gita </i> | translation by stephen mitchell</p>
-              <p><i> chip war: the fight for the world's most critical technology </i> | chris miller</p>
-              <p><i> hope for cynics: the surprising science of human goodness </i> | jamil zaki</p>
-              <p><i> death's end </i> | cixin liu</p>
-              <p><i> the happiness hypothesis </i> | jonathan haidt</p>
-              <p><i> make believe: poems for hoping again </i> | victoria hutchins</p>
-              <p><i> sunrise on the reaping </i> | suzanne collins</p>
-              <p><i> charlie y la fábrica de chocolate </i> | roald dahl</p>
-              <p><i> the order of time </i> | carlo rovelli</p>
-              <p><i> flowers on the moon </i> | billy chapata</p>
-              <p><i> the analects </i> | confucius</p>
-              <p><i> a ballad of songbirds and snakes </i> | suzanne collins</p>
-              <p><i> home body </i> | rupi kaur</p>
+              <p><i style="color: #64ffda;"> the portable nietzsche </i> | translation by walter kaufmann</p>
+              <p><i style="color: #64ffda;"> abolish silicon valley: how to liberate technology from capitalism </i> | wendy liu </p>
+              <p><i style="color: #64ffda;"> bhagavad gita </i> | translation by stephen mitchell</p>
+              <p><i style="color: #64ffda;"> chip war: the fight for the world's most critical technology </i> | chris miller</p>
+              <p><i style="color: #64ffda;"> gödel, escher, bach: an eternal golden braid </i> | douglas r. hofstadter</p>
+              <p><i style="color: #64ffda;"> hope for cynics: the surprising science of human goodness </i> | jamil zaki</p>
+              <p><i style="color: #64ffda;"> death's end </i> | cixin liu</p>
+              <p><i style="color: #64ffda;"> the happiness hypothesis </i> | jonathan haidt</p>
+              <p><i style="color: #64ffda;"> make believe: poems for hoping again </i> | victoria hutchins</p>
+              <p><i style="color: #64ffda;"> sunrise on the reaping </i> | suzanne collins</p>
+              <p><i style="color: #64ffda;"> charlie y la fábrica de chocolate </i> | roald dahl</p>
+              <p><i style="color: #64ffda;"> the order of time </i> | carlo rovelli</p>
+              <p><i style="color: #64ffda;"> flowers on the moon </i> | billy chapata</p>
+              <p><i style="color: #64ffda;"> the analects </i> | confucius</p>
+              <p><i style="color: #64ffda;"> a ballad of songbirds and snakes </i> | suzanne collins</p>
+              <p><i style="color: #64ffda;"> home body </i> | rupi kaur</p>
               <br>
 
               <p><b> 2024 </b></p>
-              <p><i> the dark forest </i> | cixin liu</p>
-              <p><i> a court of thorns and roses </i> | sarah j maas </p>
-              <p><i> spies, lies, and algorithms: the history and future of american intelligence </i> | amy zegart</p>
-              <p><i> know my name </i> | chanel miller</p>
-              <p><i> zero to one </i> | peter thiel</p>
-              <p><i> yellowface </i> | r.f. kuang</p>
-              <p><i> tomorrow, and tomorrow, and tomorrow </i> | gabrielle zevin</p>
-              <p><i> crying in h mart </i> | michelle zauner</p>
-              <p><i> eclipse </i> | wilder poetry</p>
-              <p><i> steve jobs </i> | walter isaacson</p>
-              <p><i> as the last i may know </i> | s.l. huang</p>
-              <p><i> foundation </i> | isaac asimov</p>
-              <p><i> frankenstein </i> | mary shelley</p>
-              <p><i> the alchemist </i> | paulo coelho</p>
-              <p><i> the three-body problem </i> | cixin liu</p>
-              <p><i> how to be a founder: how entrepreneurs can identify, fund and launch their best ideas </i> | alice bentinck & matt clifford</p>
-              <p><i> pale blue dot </i> | carl sagan</p>
-              <p><i> mono no aware </i> | ken liu</p>
-              <p><i> on the rainy river </i> | tim o'brien</p>
-              <p><i> system error: where big tech went wrong and how we can reboot </i> | tim o'brien</p>
-              <p><i> how to do nothing: resisting the attention economy </i> | jenny odell</p>
-              <p><i> educated </i> | tara westover</p>
+              <p><i style="color: #64ffda;"> the dark forest </i> | cixin liu</p>
+              <p><i style="color: #64ffda;"> a court of thorns and roses </i> | sarah j maas </p>
+              <p><i style="color: #64ffda;"> spies, lies, and algorithms: the history and future of american intelligence </i> | amy zegart</p>
+              <p><i style="color: #64ffda;"> know my name </i> | chanel miller</p>
+              <p><i style="color: #64ffda;"> zero to one </i> | peter thiel</p>
+              <p><i style="color: #64ffda;"> yellowface </i> | r.f. kuang</p>
+              <p><i style="color: #64ffda;"> tomorrow, and tomorrow, and tomorrow </i> | gabrielle zevin</p>
+              <p><i style="color: #64ffda;"> crying in h mart </i> | michelle zauner</p>
+              <p><i style="color: #64ffda;"> eclipse </i> | wilder poetry</p>
+              <p><i style="color: #64ffda;"> steve jobs </i> | walter isaacson</p>
+              <p><i style="color: #64ffda;"> as the last i may know </i> | s.l. huang</p>
+              <p><i style="color: #64ffda;"> foundation </i> | isaac asimov</p>
+              <p><i style="color: #64ffda;"> frankenstein </i> | mary shelley</p>
+              <p><i style="color: #64ffda;"> the alchemist </i> | paulo coelho</p>
+              <p><i style="color: #64ffda;"> the three-body problem </i> | cixin liu</p>
+              <p><i style="color: #64ffda;"> how to be a founder: how entrepreneurs can identify, fund and launch their best ideas </i> | alice bentinck & matt clifford</p>
+              <p><i style="color: #64ffda;"> pale blue dot </i> | carl sagan</p>
+              <p><i style="color: #64ffda;"> mono no aware </i> | ken liu</p>
+              <p><i style="color: #64ffda;"> on the rainy river </i> | tim o'brien</p>
+              <p><i style="color: #64ffda;"> system error: where big tech went wrong and how we can reboot </i> | tim o'brien</p>
+              <p><i style="color: #64ffda;"> how to do nothing: resisting the attention economy </i> | jenny odell</p>
+              <p><i style="color: #64ffda;"> educated </i> | tara westover</p>
               <br>
 
               <p><b> 2022 - 2023 </b></p>
-              <p><i> this is water: some thoughts, delivered on a significant occasion, about living a compassionate life </i> | david foster wallace</p>
-              <p><i> ozymandias </i> | percy bysshe shelley</p>
-              <p><i> the road not taken and other poems </i> | robert frost</p>
-              <p><i> the awakened brain: the new science of spirituality and our quest for an inspired life </i> | lisa miller</p>
-              <p><i> on earth we're briefly gorgeous </i> | ocean vuong</p>
-              <p><i> the paper menagerie </i> | ken liu</p>
-              <p><i> this time will be different </i> | misa sugiura</p>
-              <p><i> letter from utopia </i> | nick bostrom</p>
-              <p><i> braiding sweetgrass: indigenous wisdom, scientific knowledge, and the teachings of plants </i> | robin wall kimmerer</p>
-              <p><i> the myth of sisyphus </i> | albert camus</p>
-              <p><i> attention is all you need </i> | ashish vaswani, et al.</p>
-              <p><i> superintelligence: paths, dangers, strategies </i> | nick bostrom</p>
-              <p><i> the universe in zero words: the story of mathematics as told through equations </i> | dana mackenzie</p>
-              <p><i> little fires everywhere </i> | celeste ng</p>
-              <p><i> face to face with vincent van gogh </i> | aukje vergeest</p>
-              <p><i> computing machinery and intelligence </i> | alan turing</p>
-              <p><i> the precipice </i> | toby ord</p>
-              <p><i> dune </i> | frank herbert</p>
-              <p><i> when breath becomes air </i> | paul kalanithi</p>
-              <p><i> the scout mindset: why some people see things clearly and others don't </i> | julia galef</p>
-              <p><i> the song of achilles </i> | madeline miller</p>
-              <p><i> the sun is also a star </i> | nicola yoon</p>
-              <p><i> this book is gay </i> | juno dawson </p>
-              <p><i> a hunger artist </i> | franz kafka</p>
-              <p><i> the catcher in the rye </i> | j.d. salinger </p>
-              <p><i> the killer angels </i> | michael shaara </p>
+              <p><i style="color: #64ffda;"> this is water: some thoughts, delivered on a significant occasion, about living a compassionate life </i> | david foster wallace</p>
+              <p><i style="color: #64ffda;"> ozymandias </i> | percy bysshe shelley</p>
+              <p><i style="color: #64ffda;"> the road not taken and other poems </i> | robert frost</p>
+              <p><i style="color: #64ffda;"> the awakened brain: the new science of spirituality and our quest for an inspired life </i> | lisa miller</p>
+              <p><i style="color: #64ffda;"> on earth we're briefly gorgeous </i> | ocean vuong</p>
+              <p><i style="color: #64ffda;"> the paper menagerie </i> | ken liu</p>
+              <p><i style="color: #64ffda;"> this time will be different </i> | misa sugiura</p>
+              <p><i style="color: #64ffda;"> letter from utopia </i> | nick bostrom</p>
+              <p><i style="color: #64ffda;"> braiding sweetgrass: indigenous wisdom, scientific knowledge, and the teachings of plants </i> | robin wall kimmerer</p>
+              <p><i style="color: #64ffda;"> the myth of sisyphus </i> | albert camus</p>
+              <p><i style="color: #64ffda;"> attention is all you need </i> | ashish vaswani, et al.</p>
+              <p><i style="color: #64ffda;"> superintelligence: paths, dangers, strategies </i> | nick bostrom</p>
+              <p><i style="color: #64ffda;"> the universe in zero words: the story of mathematics as told through equations </i> | dana mackenzie</p>
+              <p><i style="color: #64ffda;"> little fires everywhere </i> | celeste ng</p>
+              <p><i style="color: #64ffda;"> face to face with vincent van gogh </i> | aukje vergeest</p>
+              <p><i style="color: #64ffda;"> computing machinery and intelligence </i> | alan turing</p>
+              <p><i style="color: #64ffda;"> the precipice </i> | toby ord</p>
+              <p><i style="color: #64ffda;"> dune </i> | frank herbert</p>
+              <p><i style="color: #64ffda;"> when breath becomes air </i> | paul kalanithi</p>
+              <p><i style="color: #64ffda;"> the scout mindset: why some people see things clearly and others don't </i> | julia galef</p>
+              <p><i style="color: #64ffda;"> the song of achilles </i> | madeline miller</p>
+              <p><i style="color: #64ffda;"> the sun is also a star </i> | nicola yoon</p>
+              <p><i style="color: #64ffda;"> this book is gay </i> | juno dawson </p>
+              <p><i style="color: #64ffda;"> a hunger artist </i> | franz kafka</p>
+              <p><i style="color: #64ffda;"> the catcher in the rye </i> | j.d. salinger </p>
+              <p><i style="color: #64ffda;"> the killer angels </i> | michael shaara </p>
               <br>
 
               <p><b> 2019 - 2021 </b></p>
-              <p><i> the great gatsby </i> | f. scott fitzgerald </p>
-              <p><i> the jungle </i> | upton sinclair </p>
-              <p><i> julius caesar </i> | william shakespeare </p>
-              <p><i> things fall apart </i> | chinua achebe </p>
-              <p><i> outliers </i> | malcolm gladwell </p>
-              <p><i> the kite runner </i> | khaled hosseini </p>
-              <p><i> red white and royal blue </i> | casey mcquiston </p>
-              <p><i> battle hymn of the tiger mother </i> | amy chua </p>
-              <p><i> milk and honey </i> | rupi kaur </p>
-              <p><i> the sun and her flowers </i> | rupi kaur </p>
-              <p><i> the house on mango street </i> | sandra cisneros </p>
-              <p><i> tao te ching </i> | laozi </p>
-              <p><i> anne frank: the diary of a young girl </i> | anne frank </p>
-              <p><i> american born chinese </i> | gene luen yang </p>
-              <p><i> illuminae </i> | amie kaufman & jay kristoff </p>
-              <p><i> metamorphosis </i> | franz kafka </p>
-              <p><i> warriors don't cry </i> | melba pattillo beals </p>
-              <p><i> the odyssey </i> | homer </p>
-              <p><i> of mice and men </i> | john steinbeck </p>
-              <p><i> romeo and juliet </i> | william shakespeare </p>
-              <p><i> persepolis </i> | marjane satrapi </p>
-              <p><i> the absolutely true diary of a part-time indian </i> | sherman alexie </p>
-              <p><i> the bean trees </i> | barbara kingsolver</p>
+              <p><i style="color: #64ffda;"> the great gatsby </i> | f. scott fitzgerald </p>
+              <p><i style="color: #64ffda;"> the jungle </i> | upton sinclair </p>
+              <p><i style="color: #64ffda;"> julius caesar </i> | william shakespeare </p>
+              <p><i style="color: #64ffda;"> things fall apart </i> | chinua achebe </p>
+              <p><i style="color: #64ffda;"> outliers </i> | malcolm gladwell </p>
+              <p><i style="color: #64ffda;"> the kite runner </i> | khaled hosseini </p>
+              <p><i style="color: #64ffda;"> red white and royal blue </i> | casey mcquiston </p>
+              <p><i style="color: #64ffda;"> battle hymn of the tiger mother </i> | amy chua </p>
+              <p><i style="color: #64ffda;"> milk and honey </i> | rupi kaur </p>
+              <p><i style="color: #64ffda;"> the sun and her flowers </i> | rupi kaur </p>
+              <p><i style="color: #64ffda;"> the house on mango street </i> | sandra cisneros </p>
+              <p><i style="color: #64ffda;"> tao te ching </i> | laozi </p>
+              <p><i style="color: #64ffda;"> anne frank: the diary of a young girl </i> | anne frank </p>
+              <p><i style="color: #64ffda;"> american born chinese </i> | gene luen yang </p>
+              <p><i style="color: #64ffda;"> illuminae </i> | amie kaufman & jay kristoff </p>
+              <p><i style="color: #64ffda;"> metamorphosis </i> | franz kafka </p>
+              <p><i style="color: #64ffda;"> warriors don't cry </i> | melba pattillo beals </p>
+              <p><i style="color: #64ffda;"> the odyssey </i> | homer </p>
+              <p><i style="color: #64ffda;"> of mice and men </i> | john steinbeck </p>
+              <p><i style="color: #64ffda;"> romeo and juliet </i> | william shakespeare </p>
+              <p><i style="color: #64ffda;"> persepolis </i> | marjane satrapi </p>
+              <p><i style="color: #64ffda;"> the absolutely true diary of a part-time indian </i> | sherman alexie </p>
+              <p><i style="color: #64ffda;"> the bean trees </i> | barbara kingsolver</p>
 
               <br>
 
               <p><b> pre 2019</b></p>
-              <p><i> the grapes of wrath </i> | john steinbeck</p>
-              <p><i> the lord of the flies </i> | william golding </p>
-              <p><i> to kill a mockingbird </i> | harper lee </p>
-              <p><i> the fault in our stars </i> | john green </p>
-              <p><i> 20,000 leagues under the sea </i> | jules verne </p>
-              <p><i> 13 reasons why </i> | jay asher </p>
-              <p><i> cinder </i> | marissa meyer </p>
-              <p><i> love and gelato </i> | jenna evans welch </p>
-              <p><i> the call of the wild </i> | jack london </p>
-              <p><i> the outsiders </i> | s.e. hinton </p>
+              <p><i style="color: #64ffda;"> the grapes of wrath </i> | john steinbeck</p>
+              <p><i style="color: #64ffda;"> the lord of the flies </i> | william golding </p>
+              <p><i style="color: #64ffda;"> to kill a mockingbird </i> | harper lee </p>
+              <p><i style="color: #64ffda;"> the fault in our stars </i> | john green </p>
+              <p><i style="color: #64ffda;"> 20,000 leagues under the sea </i> | jules verne </p>
+              <p><i style="color: #64ffda;"> 13 reasons why </i> | jay asher </p>
+              <p><i style="color: #64ffda;"> cinder </i> | marissa meyer </p>
+              <p><i style="color: #64ffda;"> love and gelato </i> | jenna evans welch </p>
+              <p><i style="color: #64ffda;"> the call of the wild </i> | jack london </p>
+              <p><i style="color: #64ffda;"> the outsiders </i> | s.e. hinton </p>
               <br>
             </div>
         </div>
