--- a/writing.html
+++ b/writing.html
@@ -7,7 +7,7 @@
   <script src="assets/js/analytics.js"></script>
 
   <link rel="icon" href="images/teal-slash-favicon.png">
-  <title>tony wang</title>
+  <title>TONY WANG | WRITING</title>
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -33,7 +33,7 @@
             <a href="https://github.com/tonywangs" class="branch" target="_blank" rel="noopener noreferrer">└── github.sh</a>
             <a href="https://www.linkedin.com/in/tony-wang-/" class="branch" target="_blank" rel="noopener noreferrer">└── linkedin.json</a>
             <a href="https://twitter.com/TonyW__" class="branch" target="_blank" rel="noopener noreferrer">└── twitter.js</a>
-            <a href="https://metax.substack.com/" class="branch-end" target="_blank" rel="noopener noreferrer">└── substack.txt</a>
+            <a href="https://tonywang.substack.com/" class="branch-end" target="_blank" rel="noopener noreferrer">└── substack.txt</a>
           </div>
         </li>
       </ul>
@@ -51,10 +51,12 @@
             <hr style="border: 0; height: 1px; background-color: #563D25; margin: 20px 0;">
               <!-- <br> -->
                 <p><i>essays</i></p>
-                <p><i>on the end of personalization</i> | <a href="./essays/end-of-personalization.html">read here</a></p>
-                <p><i>tech bro go home: on queer rage and ruin </i> | <a href="./essays/queers-hate-techies.html">read here</a></p>
-                <p><i>spies, systems, satire, and sleep </i> | <a href="./essays/sophomore-classes.html">read here</a></p>
+                <p><i>some notes on vlms</i> | <a href="https://tonywang.substack.com/p/some-notes-on-vlms">substack</a></p>
+                <p><i>fifty shades of branding</i> | <a href="https://tonywang.substack.com/p/fifty-shades-of-branding">substack</a></p>
+                <p><i>tech bro go home: on queer rage and ruin </i> | <a href="https://tonywang.substack.com/p/tech-bro-go-home-on-queer-rage-and">substack</a></p>
+                <p><i>spies, systems, satire, and sleep </i> | <a href="https://tonywang.substack.com/p/spies-systems-satire-and-sleep">substack</a></p>
                 <p><i>the anti-buddha </i> | <a href="./essays/anti-buddha.html">read here</a></p>
+                <p><i>on the end of personalization</i> | <a href="./essays/end-of-personalization.html">read here</a></p>
                 <!-- <p><i> </i></p> -->
                 <br>
                 <p><i>poems</i></p>
