--- a/essays/end-of-personalization.html
+++ b/essays/end-of-personalization.html
@@ -33,7 +33,7 @@
             <a href="https://github.com/tonywangs" class="branch" target="_blank" rel="noopener noreferrer">└── github.sh</a>
             <a href="https://www.linkedin.com/in/tony-wang-/" class="branch" target="_blank" rel="noopener noreferrer">└── linkedin.json</a>
             <a href="https://twitter.com/TonyW__" class="branch" target="_blank" rel="noopener noreferrer">└── twitter.js</a>
-            <a href="https://metax.substack.com/" class="branch-end" target="_blank" rel="noopener noreferrer">└── substack.txt</a>
+            <a href="https://tonywang.substack.com/" class="branch-end" target="_blank" rel="noopener noreferrer">└── substack.txt</a>
           </div>
         </li>
       </ul>
