new projects, books

--- a/projects.html
+++ b/projects.html
@@ -45,13 +45,59 @@
       <p class="p-padding"><b><span style="color: #ff64da;">></span> studying <a href="https://github.com/tonywangs">cs</a> + <a href="https://sumo.stanford.edu/proco/">math</a> @ stanford</b></p>
       
         <div class="p-body">
-          <h3 id="projectsHeader"><b>past projects</b></h3>
+          <h3 id="projectsHeader"><b>projects</b></h3>
           <p id="projectsSubtitle" class="subtitle">
-            a collection of fun things i've made
+            a compilation of things i've built!
           </p>
+
+          <div class="project-post">
+            <p class="project-title"><b>ContractMe</b></p>
+            <p class="project-description">
+              2nd Place Best Overall Hack at Brex AgentJam Hackathon by Pylon, Sixtyfour, Lovable, and Fondo. Built an AI agent that automatically handles the entire essential services contracting pipeline, from a voice-based phone agent handling the initial request to a full-fledged contract management system.
+            </p>
+            <div class="project-links">
+                <a href="https://drive.google.com/file/d/1FW4zwhs1E_8yNIxPShxd1ZEWAeiT6jT0/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="project-link">Demo Video</a>
+                <a href="https://github.com/vyomfadia/contract-me" target="_blank" rel="noopener noreferrer" class="project-link">Github</a>
+            </div>
+          </div>
+
+          <div class="project-post">
+            <p class="project-title"><b>Code Canary</b></p>
+            <p class="project-description">
+              Best Overall Hack + 2nd Place Modal Prize at the AI Agent & Infra Hackathon by Lux Capital, Modal, Cognition, AWS, and Ramp. Built an AI agent that generates SBOMs, detects vulnerabilities, and triages transitive dependency risks like typosquatting and maintainer takeovers.
+            </p>
+            <div class="project-links">
+                <a href="https://devpost.com/software/code-canary" target="_blank" rel="noopener noreferrer" class="project-link">Devpost</a>
+                <a href="https://www.youtube.com/watch?v=mQcUn0XgKqY" target="_blank" rel="noopener noreferrer" class="project-link">Video</a>
+                <a href="https://github.com/tonywangs/code-canary" target="_blank" rel="noopener noreferrer" class="project-link">Github</a>
+            </div>
+          </div>
+
+          <div class="project-post">
+            <p class="project-title"><b>EXPLORAGON City Exploration Game</b></p>
+            <p class="project-description">
+              City exploration game that divides SF into 1,000 H3 hexagons. Players complete AI-verified, location-specific challenges to claim territory in real time, with live leaderboards and multiplayer GPS tracking. Top 25 at FAF Multimodal Hackathon. 
+            </p>
+            <img src="images/exploragon-demo-pics-horizontal.svg" alt="Images of the Exploragon game" class="project-image" width="100%">
+            <div class="project-links">
+                <a href="https://devpost.com/software/exploragon" target="_blank" rel="noopener noreferrer" class="project-link">Devpost</a>
+                <a href="https://youtu.be/gYtgMuymzdY" target="_blank" rel="noopener noreferrer" class="project-link">Video</a>
+                <a href="https://github.com/tonywangs/exploragon" target="_blank" rel="noopener noreferrer" class="project-link">Github</a>
+            </div>
+          </div>
+
+          <div class="project-post">
+            <p class="project-title"><b>Small Claims Court Form Generator</b></p>
+            <p class="project-description">
+              With Korbin and Benny, built a Next.js tool that turns a simple web form into a fully filled California SC-100 PDF. Features AI-assisted legal text generation, court lookup, business info autofill, and smart validation.
+            </p>
+            <div class="project-links">
+                <a href="https://github.com/tonywangs/cognition-hackathon" target="_blank" rel="noopener noreferrer" class="project-link">Github</a>
+            </div>
+          </div>
           
           <div class="project-post">
-            <p class="project-title"><b>Caply (CCPA Compliance Tool)</b></p>
+            <p class="project-title"><b>Caply (User Data Management Tool)</b></p>
             <p class="project-description">
               Akaash and I engineered a tool to streamline California Consumer Privacy Act (CCPA) compliance for SMBs. Caply empowers companies to efficiently identify and purge personal data from their systems, as well as automatically notifying third-party vendors, ensuring adherence to critical privacy regulations.
             </p>
@@ -110,7 +156,7 @@
             <p class="project-description">
               Developed 'Hourglass,' a productivity-tracking iOS application designed to gamify time management. The app fosters motivation through social accountability features and provides visual progress tracking, empowering users to take control of their time.
             </p>
-            <img src="images/hourglass-demo-pics.svg" alt="Demo of the Hourglass app" class="project-image" width="100%">
+            <img src="images/hourglass-demo-pics-clean.svg" alt="Demo of the Hourglass app" class="project-image" width="100%">
             <div class="project-links">
                 <a href="https://github.com/tonywangs/cs278-final-project" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
                 <a href="https://www.youtube.com/watch?v=gj5VHRDr-i8" target="_blank" rel="noopener noreferrer" class="project-link">Demo</a>
@@ -167,7 +213,7 @@
             <p class="project-description">
              During my Amazon internship last summer, I designed and proposed an AI Technical Program Manager for project forecasting. I integrated LLMs and standard neural networks to create a more accurate and automated system for workforce planning. I received an Amazon Raising the Bar award for my project! 
             </p>
-            <img src="images/amazon-block-diagram.png" alt="Block diagram of the Amazon headcount forecasting system" class="project-image" width="100%">
+            <img src="images/amazon-block-diagram.png" alt="Block diagram of the Amazon headcount forecasting system" class="project-image" width="50%">
           </div>
 
           <div class="project-post">
