--- a/reading.html
+++ b/reading.html
@@ -53,6 +53,7 @@
               <br>
 
               <p><b> 2025 </b></p>
+              <p><i style="color: #64ffda;"> cradle to cradle: remaking the way we make things </i> | william mcdonough, michael braungart</p>
               <p><i style="color: #64ffda;"> the portable nietzsche </i> | translation by walter kaufmann</p>
               <p><i style="color: #64ffda;"> abolish silicon valley: how to liberate technology from capitalism </i> | wendy liu </p>
               <p><i style="color: #64ffda;"> bhagavad gita </i> | translation by stephen mitchell</p>
@@ -152,14 +153,16 @@
 
               <br>
 
-              <p><b> pre 2019</b></p>
+              <p><b> pre 2019 faves</b></p>
               <p><i style="color: #64ffda;"> the grapes of wrath </i> | john steinbeck</p>
               <p><i style="color: #64ffda;"> the lord of the flies </i> | william golding </p>
               <p><i style="color: #64ffda;"> to kill a mockingbird </i> | harper lee </p>
               <p><i style="color: #64ffda;"> the fault in our stars </i> | john green </p>
               <p><i style="color: #64ffda;"> 20,000 leagues under the sea </i> | jules verne </p>
-              <p><i style="color: #64ffda;"> 13 reasons why </i> | jay asher </p>
-              <p><i style="color: #64ffda;"> cinder </i> | marissa meyer </p>
+              <p><i style="color: #64ffda;"> the red badge of courage </i> | stephen crane </p>
+              <p><i style="color: #64ffda;"> the adventures of tom sawyer </i> | mark twain </p>
+              <p><i style="color: #64ffda;"> adventures of huckleberry finn </i> | mark twain </p>
+              <p><i style="color: #64ffda;"> i am malala </i> | malala yousafzai </p>
               <p><i style="color: #64ffda;"> love and gelato </i> | jenna evans welch </p>
               <p><i style="color: #64ffda;"> the call of the wild </i> | jack london </p>
               <p><i style="color: #64ffda;"> the outsiders </i> | s.e. hinton </p>
